[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Functions/RequestPlayerData.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Scenes/Svar/Svar.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Scenes/Lobby.gd" type="Script" id=3]

[node name="Svar" type="Node2D"]
script = ExtResource( 2 )

[node name="Lobby" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="PlayerAmount" type="Label" parent="Lobby"]
margin_left = 2.9406
margin_top = 5.9405
margin_right = 114.941
margin_bottom = 28.9405
rect_scale = Vector2( 1.5, 1.5 )
text = "Current Players:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InviteCode" type="Label" parent="Lobby"]
margin_left = 673.337
margin_top = 18.3929
margin_right = 828.337
margin_bottom = 59.3929
rect_scale = Vector2( 2, 2 )
text = "Invite Code:
AAAA"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerNamesLabel" type="Label" parent="Lobby"]
margin_left = 9.0
margin_top = 39.8316
margin_right = 120.0
margin_bottom = 187.832
rect_scale = Vector2( 1.5, 1.5 )
text = "Kevin
Kevin
Kevin
Kevin
Kevin
Kevin
Kevin
Kevin"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RequestPlayerData" parent="Lobby" instance=ExtResource( 1 )]

[node name="QuestionLabel" type="Label" parent="."]
margin_left = 150.0
margin_top = 37.0
margin_right = 488.0
margin_bottom = 135.0
rect_scale = Vector2( 2, 2 )
text = "He She It, Das S muss ____?"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnswerTextbox" type="TextEdit" parent="."]
margin_left = 231.892
margin_top = 278.485
margin_right = 479.892
margin_bottom = 319.485
rect_scale = Vector2( 2, 2 )
text = "mit!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Submit" type="Button" parent="."]
margin_left = 383.0
margin_top = 393.0
margin_right = 567.0
margin_bottom = 454.0
text = "Submit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[node name="Label" type="Label" parent="Timer"]
margin_left = 779.0
margin_top = 512.0
margin_right = 888.0
margin_bottom = 543.0
rect_scale = Vector2( 2, 2 )
text = "Remaining Time:
69 Seconds"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpdatePlayerData" type="Timer" parent="."]
wait_time = 5.0
autostart = true
[connection signal="worked" from="Lobby/RequestPlayerData" to="Lobby" method="_on_RequestPlayerData_worked"]
[connection signal="text_changed" from="AnswerTextbox" to="." method="_on_AnswerTextbox_text_changed"]
[connection signal="pressed" from="Submit" to="." method="_on_Submit_pressed"]
[connection signal="timeout" from="UpdatePlayerData" to="." method="_on_UpdatePlayerData_timeout"]
